# Book-Tracker

./: .gitignore  CLAUDE.md  README.md  SPEC.md  index.html  package-lock.json  package.json  todo.md
.devcontainer/: devcontainer.json
.github/workflows/: release.yml
bucket/: book-tracker.json
deprecated/scripts/: update-windows.ps1
prompts/: CLAUDE.md
prompts/archives/: 2026-04-18T194151Z_01-consolidate-frontends.md  2026-04-18T200546Z_02-port-db-crud.md  2026-04-18T220433Z_03-port-validation-and-csv.md  2026-04-18T221332Z_04-replace-fs-and-dialog.md  2026-04-18T221536Z_05-rewire-frontend.md  2026-04-19T221236Z_06-smoke-test-and-retag.md
scoop/: book-tracker.json
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: settings.rs
src-tauri/src/db/: migrations.rs
src-tauri/src/models/: book.rs  mod.rs
src/views/: ActiveBooks.svelte  CompletedBooks.svelte  ImportExport.svelte  Settings.svelte
tests/: TESTS.md  book-card-quick-add.test.ts  calculations.test.ts  daily-goals.test.ts  dates.test.ts
wails/: app.go  files.go  files_test.go  go.mod  main.go  wails.json
wails/frontend/: index.html  package-lock.json  package.json  vitest.config.ts
wails/migrations/: migrations.go  schema.sql
wails/model/: book.go  csv.go  settings.go
wails/service/: TESTS.md  books.go  books_crud.go  books_crud_test.go  books_test.go  crud.go  crud_test.go  csv.go  csv_test.go  service.go  settings_crud.go  settings_crud_test.go  validation_test.go
(+46 files in other folders)
